corpus/c/syntax/case-05/snapshots/gcc15/dual_sink_structured/render.default.txt
note: some compiler details were not fully structured; original diagnostics are preserved
error: [syntax] expected ')' before ';' token @ src/main.c:2:18
want: )
near: ; token
| src/main.c:2:18
|     return (1 + 2;
|                  ^
suggested edit: insert ')' at src/main.c:2:18
  patch: src/main.c
  2 -     return (1 + 2;
  2 +     return (1 + 2);

error: [syntax] expected ';' before '}}' token @ src/main.c:2:19
want: ;
near: }} token
| src/main.c:2:19
|     return (1 + 2;
|                   ^
suggested edit: insert ';' at src/main.c:2:19
  patch: src/main.c
  2 -     return (1 + 2;
  2 +     return (1 + 2;;

error: [syntax] expected ';' before '}' token
    2 |     return (1 + 2;
      |                   ^
      |                   ;
    3 | }
      | ~
want: ; @ src/main.c:2:19
near: } token
| src/main.c:2:19
|     return (1 + 2;
|                   ^